@@ -2,6 +2,8 @@ package com.crowdfunding.tecendoarte.controllers;
 
 import com.crowdfunding.tecendoarte.dto.ContaDTO.ContaRequestDTO;
 import com.crowdfunding.tecendoarte.dto.UsuarioDTO.UsuarioRequestDTO;
+import com.crowdfunding.tecendoarte.dto.UsuarioDTO.UsuarioLoginRequestDTO;
+import com.crowdfunding.tecendoarte.models.Conta;
 import com.crowdfunding.tecendoarte.models.Usuario;
 import com.crowdfunding.tecendoarte.models.enums.TipoArte;
 import com.crowdfunding.tecendoarte.models.enums.TipoConta;
@@ -9,13 +11,18 @@ import com.crowdfunding.tecendoarte.repositories.ContaRepository;
 import com.crowdfunding.tecendoarte.repositories.UsuarioRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import jakarta.transaction.Transactional;
+
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -26,12 +33,15 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 @SpringBootTest
 @AutoConfigureMockMvc(addFilters = false) 
+@ActiveProfiles("test")
+@Transactional
 class UsuarioControllerIntegrationTest {
 
     @Autowired private MockMvc mockMvc;
     @Autowired private ObjectMapper objectMapper;
     @Autowired private UsuarioRepository usuarioRepository;
     @Autowired private ContaRepository contaRepository;
+    @Autowired private PasswordEncoder passwordEncoder;
 
     // ---------- Helpers ----------
     private String novoEmail() {
@@ -118,17 +128,6 @@ class UsuarioControllerIntegrationTest {
     }
 
     @Test
-    void criarUsuario_semConta_deveRetornarBadRequest() throws Exception {
-        UsuarioRequestDTO req = new UsuarioRequestDTO();
-
-        mockMvc.perform(post("/usuarios")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(req)))
-                .andExpect(status().isBadRequest())
-                .andExpect(content().string(containsString("contaId")));
-    }
-
-    @Test
     void buscarUsuario_inexistente_deveRetornarNotFound() throws Exception {
         mockMvc.perform(get("/usuarios/{id}", 999999L))
                 .andExpect(status().isNotFound());
@@ -141,29 +140,93 @@ class UsuarioControllerIntegrationTest {
     }
 
     @Test
-    void naoDeveCriarUsuarioSeContaJaPossuiUsuario() throws Exception {
-        Long contaId = criarConta();
+    void login_ComCredenciaisValidas_DeveRetornarToken() throws Exception {
+        // Arrange
+        Conta conta = Conta.builder()
+                .email("usuario@teste.com")
+                .senha(passwordEncoder.encode("senha123"))
+                .nome("Usuário Teste")
+                .tipoConta(TipoConta.USUARIO)
+                .build();
+        conta = contaRepository.save(conta);
 
-        UsuarioRequestDTO segundo = new UsuarioRequestDTO();
-        segundo.setContaId(contaId);
-        segundo.setInteresses(List.of(TipoArte.ESCULTURA));
+        Usuario usuario = Usuario.builder()
+                .conta(conta)
+                .interesses(Arrays.asList(TipoArte.PINTURA, TipoArte.ESCULTURA))
+                .build();
+        usuarioRepository.save(usuario);
 
-        mockMvc.perform(post("/usuarios")
+        UsuarioLoginRequestDTO request = new UsuarioLoginRequestDTO();
+        request.setEmail("usuario@teste.com");
+        request.setSenha("senha123");
+
+        // Act & Assert
+        mockMvc.perform(post("/usuarios/login")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(segundo)))
-                .andExpect(status().isBadRequest())
-                .andExpect(content().string(containsString("Ja existe um usuario vinculado a essa conta.")));
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.token").exists())
+                .andExpect(jsonPath("$.email").value("usuario@teste.com"))
+                .andExpect(jsonPath("$.nome").value("Usuário Teste"))
+                .andExpect(jsonPath("$.usuarioId").value(usuario.getId()))
+                .andExpect(jsonPath("$.tipoConta").value("USUARIO"));
     }
 
     @Test
-    void criarUsuario_comContaInexistente_deveRetornarNotFound() throws Exception {
-        UsuarioRequestDTO req = new UsuarioRequestDTO();
-        req.setContaId(999999L);
-        req.setInteresses(List.of(TipoArte.PINTURA));
+    void login_ComEmailInexistente_DeveRetornarErro() throws Exception {
+        // Arrange
+        UsuarioLoginRequestDTO request = new UsuarioLoginRequestDTO();
+        request.setEmail("inexistente@teste.com");
+        request.setSenha("senha123");
 
-        mockMvc.perform(post("/usuarios")
+        // Act & Assert
+        mockMvc.perform(post("/usuarios/login")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(req)))
-                .andExpect(status().isNotFound());
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string("Usuário não encontrado"));
+    }
+
+    @Test
+    void login_ComSenhaIncorreta_DeveRetornarErro() throws Exception {
+        // Arrange
+        Conta conta = Conta.builder()
+                .email("usuario@teste.com")
+                .senha(passwordEncoder.encode("senha123"))
+                .nome("Usuário Teste")
+                .tipoConta(TipoConta.USUARIO)
+                .build();
+        conta = contaRepository.save(conta);
+
+        Usuario usuario = Usuario.builder()
+                .conta(conta)
+                .interesses(Arrays.asList(TipoArte.PINTURA))
+                .build();
+        usuarioRepository.save(usuario);
+
+        UsuarioLoginRequestDTO request = new UsuarioLoginRequestDTO();
+        request.setEmail("usuario@teste.com");
+        request.setSenha("senha_errada");
+
+        // Act & Assert
+        mockMvc.perform(post("/usuarios/login")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string("Senha incorreta"));
+    }
+
+    @Test
+    void login_ComDadosInvalidos_DeveRetornarErro() throws Exception {
+        // Arrange
+        UsuarioLoginRequestDTO request = new UsuarioLoginRequestDTO();
+        request.setEmail("email_invalido");
+        request.setSenha("");
+
+        // Act & Assert
+        mockMvc.perform(post("/usuarios/login")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isBadRequest());
     }
 }
